# nbrun

./: .gitignore  LICENSE  pyproject.toml
.github/: ci.yml
.github/workflows/: ci.yml
nb_runner/: var_replacer.py
nbrun/: runner.py
scripts/: lint.sh  test.sh
tests/: conftest.py  test_runner.py  test_var_replacer.py
tests/test_data/: notebook.ipynb
