[build-system]
requires = [
  "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "nbrun"
description = "A framework to execute Python code from ipynb files, optionally modifying the source code before execution."
version = "0.1.0"
requires-python = ">=3.12"
authors = [
    { name = "John Kelly", email = "mrjrkelly@gmail.com" },
]
maintainers = [
    { name = "John Kelly", email = "mrjrkelly@gmail.com" },
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
black = "^24.4.2"
ipython = "^9.12.0"
mypy = "^1.11.0"
nbconvert = "^7.17.1"
nbformat = "^5.10.4"
python = "^3.12.0"



[project.urls]
Repository = "https://github.com/jkelly000/pytest-notebook"
[project.entry-points.pytest11]
notebook = "pytest_notebook.plugin"
